--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -9,7 +9,7 @@ body {
   .container {
     max-width: 800px;
     margin: 0 auto;
-    background: #fff;
+    background: #3395ec;;
     padding: 40px; 
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); 
@@ -31,7 +31,7 @@ body {
     border-radius: 5px; 
     margin-bottom: 20px;
     padding: 15px; 
-    background-color: #f9f9f9; 
+    background-color: #3395ec;; 
   }
   
   legend {
