--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -1,56 +1,53 @@
-style.css
 body {
     font-family: Arial, sans-serif;
-    background-color: #c2b6b6;
+    background-color: #b9b6c2;
     margin: 0;
     padding: 20px;
-}
-
-.container {
+  }
+  
+  
+  .container {
     max-width: 800px;
     margin: 0 auto;
-    background: #3d8dfd;
-    padding: 30px; 
+    background: #3395ec;
+    padding: 40px; 
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); 
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
-    color: #0f0f0f; 
+    color: #5a3d35; 
     font-weight: bold;
     margin-bottom: 20px; 
-}
-
-form {
-    margin-bottom: 40px;
-}
-
-fieldset {
+  }
+  
+  form {
+    margin-bottom: 70px;
+  }
+  
+  fieldset {
     border: 1px solid #ccc; 
     border-radius: 5px; 
     margin-bottom: 20px;
     padding: 15px; 
-    background-color: #fcfcfc; 
-}
-
-legend {
+    background-color: #3395ec;; 
+  }
+  
+  legend {
     font-weight: bold;
     font-size: 18px; 
-    color: #1d1d1d; 
+    color: #5a3d35; 
     padding: 0 10px; 
-    text-decoration: underline;
-}
-
-label {
+  }
+  
+  label {
     display: block;
     margin-bottom: 8px;
-    color: #434242; 
-    
-   
-}
-
-input, textarea {
+    color: #6b6b6b; 
+  }
+  
+  input, textarea {
     width: calc(100% - 22px); 
     padding: 10px;
     margin-bottom: 20px;
@@ -58,36 +55,36 @@ input, textarea {
     border-radius: 4px;
     font-size: 16px;
     background-color: #ffffff; 
-}
-
-button {
+  }
+  
+  
+  button {
     display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #db8718; 
-    color: rgb(8, 8, 8);
     border: none;
-    border-radius: 4px;
-    font-size: 18px;
+    border-radius: 5px;
+    border: 2px solid aqua;
+    width: 200px;
+    height: 80px;
+    font-size: 17px;
+    padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease; /
-}
-
-button:hover {
-    background-color: #d315da; 
-}
-
-.resume-output {
+  }
+  
+  button:hover {
+    background-color: #5a3d35; 
+  }
+  
+  .resume-output {
     margin-top: 40px;
-}
-
-.resume-output h2 {
+  }
+  
+  .resume-output h2 {
     margin-bottom: 10px;
-    color: #e63a0b; /
-}
-
-.resume-output p {
+    color: #4a342e; /
+  }
+  
+  .resume-output p {
     margin-bottom: 20px;
-    color: #6b6b6b;
- 
-}
+    color: #6b6b6b; 
+  }
